--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ chardet==5.1.0
 charset-normalizer==3.1.0
 click==8.1.3
 craft-archives==1.1.3
-craft-cli==2.1.0
+#craft-cli==2.1.0
+git+https://github.com/canonical/craft-cli.git@secrets-api#egg=craft_cli
 craft-grammar==1.1.1
 craft-parts==1.24.1
 craft-providers==1.15.0
